--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </nav>
     </header>
     <section>
-        <div class="max-w-10/12 border-2 m-auto bg-[url(/images/banner.png)] h-[550px] rounded-lg bg-center bg-cover bg-no-repeat px-65">
+        <div class="max-w-10/12 border-2 m-auto bg-[url(./images/banner.png)] h-[550px] rounded-lg bg-center bg-cover bg-no-repeat px-65">
               <h3 class="text-white font-extrabold text-7xl text-center mt-24">We Provide Effective Legal Solutions</h3>
               <h6 class="text-white text-center mt-6 mb-8">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</h6>
               <div class="buttons text-center gap-6 text-white">
